--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -2406,6 +2406,74 @@ span.stripe-bg i {
   border-width: 2px !important;
 }
 
+.overview-modal-box .modal-content {
+  border-radius: 1rem;
+  background: #FFF;
+  width: 33.3125rem;
+}
+.overview-modal-box .modal-content .modal-body {
+  padding: 1.5rem !important;
+}
+.overview-modal-box .modal-content .modal-body .media {
+  margin-bottom: 1rem;
+}
+.overview-modal-box .modal-content .modal-body .media h5 {
+  color: var(--primary-color-blue-light, #3D5CFF);
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 155%;
+}
+.overview-modal-box .modal-content .modal-body .media h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  margin-top: 0.6rem;
+}
+.overview-modal-box .modal-content .intro-video-box {
+  margin-bottom: 1.5rem;
+}
+.overview-modal-box .modal-content .free-sample-video-list h5 {
+  color: var(--neutral-color-neutral-80, #1C2636);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 155%;
+}
+.overview-modal-box .modal-content .free-sample-video-list .d-flex {
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 0rem;
+  border-bottom: 1px solid var(--gray-200, #E4E7EC);
+}
+.overview-modal-box .modal-content .free-sample-video-list .d-flex img.icon {
+  color: rgba(0, 0, 0, 0.1);
+  margin-right: 1rem;
+}
+.overview-modal-box .modal-content .free-sample-video-list .d-flex h4 {
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+}
+.overview-modal-box .modal-content .free-sample-video-list .d-flex img.thumb {
+  width: 2.95713rem;
+  height: 2.25rem;
+  border-radius: 0.125rem;
+  margin-right: 1rem;
+}
+.overview-modal-box .modal-content .free-sample-video-list .d-flex span {
+  display: inline-block;
+  color: var(--neutral-color-neutral-90, #101C2D);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+}
+
 @media (min-width: 320px) and (max-width: 574px) {
   .course-title {
     padding: 1rem 0;
