--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1677,6 +1677,16 @@
             }
         }
     }
+
+    .course-status-filter .btn{
+        color: #fff;
+    }
+
+    .course-status-filter .dropdown-menu{
+        border: 1px solid #1A1A1A !important;
+        background: #0D0D0D !important;
+        box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
 }
 
 
