--- a/scss/user.scss
+++ b/scss/user.scss
@@ -550,6 +550,7 @@
     box-shadow: none;
     padding: 1.5rem;
     margin-top: 1rem;
+    min-height: 70vh;
 
     .form-group {
         position: relative;
@@ -1942,16 +1943,52 @@
     font-size: 0.875rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 1.125rem; 
+    line-height: 1.125rem;
     display: inline-block;
 }
 
 
 // theme settings new css
 
+#social_increment {
+    border-radius: 0.25rem;
+    background: #F3F5FF;
+    color: var(--primary-color-blue, #294CFF);
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem;
+    padding: .2rem .5rem;
+    display: inline-block;
+    transition: all linear .3s;
 
+    &:hover {
+        background-color: #66768E;
+        color: #fff;
+    }
+}
 
-
+.social-extra-field div{
+    position: relative;
+    margin-top: 1rem;
+    a{
+        position: absolute;
+        right: 1rem;
+        cursor: pointer;
+        top: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 50%;
+        border: 2px solid #667085;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        i{
+            font-size: 0.875rem;
+            color: #667085;
+        }
+    }
+}
 
 
 
