--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1300,6 +1300,105 @@
   background: #0D0D0D !important;
   box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.1), 0px 0px 2px 0px rgba(37, 45, 52, 0.2) !important;
 }
+.dark-mode .btn-preview {
+  border-color: #7289FF;
+  color: #7289FF;
+}
+.dark-mode .btn-preview:hover {
+  background-color: #7289FF;
+  color: #000;
+}
+.dark-mode .course-overview-right-part .course-main-thumb .add-cart-bttn {
+  border-color: #7289FF;
+  color: #7289FF;
+}
+.dark-mode .course-overview-right-part .course-main-thumb .add-cart-bttn:hover {
+  background-color: #7289FF;
+  color: #000;
+}
+.dark-mode .overview-modal-box .modal-content {
+  background: #0D0D0D;
+}
+.dark-mode .overview-modal-box .modal-content .modal-body .media h5 {
+  color: #7289FF;
+}
+.dark-mode .overview-modal-box .modal-content .modal-body .media a i {
+  color: #fff !important;
+}
+.dark-mode .overview-modal-box .modal-content .free-sample-video-list .d-flex {
+  border-color: #1E222A;
+}
+.dark-mode .overview-modal-box .modal-content .free-sample-video-list .d-flex span {
+  color: #66768E !important;
+}
+.dark-mode .course-description-box {
+  color: #A6B1C4;
+}
+.dark-mode .course-modules-boxx ul li span {
+  color: #C5CCD8 !important;
+}
+.dark-mode .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.active p,
+.dark-mode .dns-page-wrapper .dns-main-body .finish-txt a,
+.dark-mode .dns-page-wrapper .file-upload-area p span,
+.dark-mode .pricing-box .txt h5,
+.dark-mode .pricing-tab-head .nav .nav-item .nav-link,
+.dark-mode .pricing-plan-sec .pricing-heading h6,
+.dark-mode .course-create-step-page-wrap .course-create-step-wrap .step-box.current p .no-data-found i {
+  color: #7289FF !important;
+}
+.dark-mode .back-next-bttns .btn:last-child,
+.dark-mode .back-next-bttns a:last-child {
+  background-color: #7289FF;
+}
+.dark-mode .form-check-input:checked {
+  background-color: #7289FF !important;
+  border-color: #7289FF !important;
+}
+.dark-mode .logo-upload-box {
+  border-color: #7289FF !important;
+}
+.dark-mode .pricing-plan-sec {
+  background-color: transparent !important;
+}
+.dark-mode .pricing-tab-head .nav {
+  background-color: #191919;
+}
+.dark-mode .pricing-tab-head .nav .nav-item .active.nav-link {
+  background: #0D0D0D;
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
+}
+.dark-mode .pricing-box {
+  border: 1px solid #1E222A;
+  background: #0D0D0D;
+  box-shadow: 0px 4px 6px -2px rgba(16, 24, 40, 0.05), 0px 12px 16px -4px rgba(16, 24, 40, 0.1);
+}
+.dark-mode .current-plan {
+  background-color: #7289FF;
+  color: #0D0D0D;
+}
+.dark-mode .pricing-box .bttn {
+  background: #121212;
+}
+.dark-mode .pricing-box .bttn a {
+  background-color: #7289FF;
+  color: #0D0D0D;
+}
+.dark-mode .pricing-box .bttn a.active {
+  background-color: #7289FF !important;
+  color: #0D0D0D;
+}
+.dark-mode .dns-page-wrapper .dns-main-body .add-domain-box .form-control {
+  border-color: #7289FF;
+}
+.dark-mode .access-page-box .form-switch .form-check-input {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e") !important;
+}
+.dark-mode .access-page-box .form-switch .form-check-input:checked {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e") !important;
+}
+.dark-mode .no-data-found i {
+  color: #7289FF !important;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
