--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1635,13 +1635,13 @@
 
         .page-box {
             border: 1px solid var(--others-dark-stroke, #1A1A1A);
-            background: #0D0D0D; 
-        } 
+            background: #0D0D0D;
+        }
 
         .action {
             h6 {
-                color: #7289FF!important;
-            } 
+                color: #7289FF !important;
+            }
 
             .form-check-input:checked {
                 background-color: #7289FF;
@@ -1653,23 +1653,23 @@
             margin-top: 2rem;
             display: grid;
             grid-template-columns: 50% 50%;
-    
-            .btn-cancel { 
-                border: 1px solid var(--gray-700, #344054); 
+
+            .btn-cancel {
+                border: 1px solid var(--gray-700, #344054);
                 box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
                 color: #98A2B3;
-    
-                &:hover{
+
+                &:hover {
                     background-color: #7289FF;
                     color: #fff;
                 }
             }
-    
+
             .btn-submit {
                 background-color: #7289FF;
                 color: #0D0D0D;
-    
-                &:hover{
+
+                &:hover {
                     background-color: #101C2D;
                     color: #fff;
                     border-color: #7289FF;
@@ -1678,14 +1678,144 @@
         }
     }
 
-    .course-status-filter .btn{
+    .course-status-filter .btn {
         color: #fff;
     }
 
-    .course-status-filter .dropdown-menu{
+    .course-status-filter .dropdown-menu {
         border: 1px solid #1A1A1A !important;
         background: #0D0D0D !important;
         box-shadow: 0px 12px 16px 4px rgba(37, 45, 52, 0.10), 0px 0px 2px 0px rgba(37, 45, 52, 0.20) !important;
+    }
+
+    .btn-preview {
+        border-color: #7289FF;
+        color: #7289FF;
+
+        &:hover {
+            background-color: #7289FF;
+            color: #000;
+        }
+    }
+
+    .course-overview-right-part .course-main-thumb .add-cart-bttn {
+        border-color: #7289FF;
+        color: #7289FF;
+
+        &:hover {
+            background-color: #7289FF;
+            color: #000;
+        }
+    }
+
+    .overview-modal-box .modal-content {
+        background: #0D0D0D;
+    }
+
+    .overview-modal-box .modal-content .modal-body .media {
+        h5 {
+            color: #7289FF;
+        }
+
+        a {
+            i {
+                color: #fff !important;
+            }
+        }
+    }
+
+    .overview-modal-box .modal-content .free-sample-video-list .d-flex {
+        border-color: #1E222A;
+    }
+
+    .overview-modal-box .modal-content .free-sample-video-list .d-flex span {
+        color: #66768E !important;
+    }
+
+    .course-description-box {
+        color: #A6B1C4;
+    }
+
+    .course-modules-boxx ul li span {
+        color: #C5CCD8 !important;
+    }
+
+    .dns-page-wrapper .dns-left-sidebar .setup-step .step-box.active p, 
+    .dns-page-wrapper .dns-main-body .finish-txt a,
+    .dns-page-wrapper .file-upload-area p span,
+    .pricing-box .txt h5,
+    .pricing-tab-head .nav .nav-item .nav-link,
+    .pricing-plan-sec .pricing-heading h6,
+    .course-create-step-page-wrap .course-create-step-wrap .step-box.current p .no-data-found i {
+        color: #7289FF !important;
+    }
+
+    .back-next-bttns .btn:last-child,
+    .back-next-bttns a:last-child {
+        background-color: #7289FF;
+    }
+
+    .form-check-input:checked {
+        background-color: #7289FF !important;
+        border-color: #7289FF !important;
+    }
+
+    .logo-upload-box{
+        border-color: #7289FF !important;
+    }
+
+    .pricing-plan-sec {
+        background-color: transparent !important;
+    }
+
+    .pricing-tab-head .nav {
+        background-color: #191919;
+
+        .nav-item .active.nav-link {
+            background: #0D0D0D;
+            box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
+        }
+    }
+
+    .pricing-box {
+        border: 1px solid #1E222A;
+        background: #0D0D0D; 
+        box-shadow: 0px 4px 6px -2px rgba(16, 24, 40, 0.05), 0px 12px 16px -4px rgba(16, 24, 40, 0.10);
+    }
+
+    .current-plan{
+        background-color: #7289FF;
+        color: #0D0D0D;
+    }
+
+    .pricing-box .bttn{
+        background: #121212;
+    }
+
+    .pricing-box .bttn a{
+        background-color: #7289FF;
+        color: #0D0D0D;
+    }
+
+    .pricing-box .bttn a.active{
+        background-color: #7289FF!important;
+        color: #0D0D0D;
+    }
+    .dns-page-wrapper .dns-main-body .add-domain-box .form-control{
+        border-color: #7289FF;
+    }
+
+    .access-page-box{
+        .form-switch .form-check-input {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e")!important;
+        }
+        .form-switch .form-check-input:checked { 
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e")!important;
+        }
+    }
+
+    .no-data-found i{
+        color: #7289FF!important;
     }
 }
 
