theme reset popup added

--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1817,6 +1817,28 @@
     .no-data-found i{
         color: #7289FF!important;
     }
+    .course-create-step-page-wrap .course-create-step-wrap .step-box.current p{
+        color: #7289FF!important;
+    }
+
+    .reset-modal .modal-content{
+        border: 1px solid #1E222A!important;
+        background: #0D0D0D!important; 
+    }
+
+    .modal-bttnss .btn-yes{
+        background-color:  #7289FF!important;
+        color: #000A39!important;
+    }
+
+    .modal-bttnss .btn-no{
+        background: #191919!important;
+        color: #fff!important;
+    }
+
+    .reset-modal .modal-content .btn i{
+        color: #fff!important;
+    }
 }
 
 
