--- a/public/latest/assets/admin-css/admin-dark.css
+++ b/public/latest/assets/admin-css/admin-dark.css
@@ -1399,6 +1399,24 @@
 .dark-mode .no-data-found i {
   color: #7289FF !important;
 }
+.dark-mode .course-create-step-page-wrap .course-create-step-wrap .step-box.current p {
+  color: #7289FF !important;
+}
+.dark-mode .reset-modal .modal-content {
+  border: 1px solid #1E222A !important;
+  background: #0D0D0D !important;
+}
+.dark-mode .modal-bttnss .btn-yes {
+  background-color: #7289FF !important;
+  color: #000A39 !important;
+}
+.dark-mode .modal-bttnss .btn-no {
+  background: #191919 !important;
+  color: #fff !important;
+}
+.dark-mode .reset-modal .modal-content .btn i {
+  color: #fff !important;
+}
 
 .dark-mode-bttn {
   z-index: 999999;
