--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2798,6 +2798,45 @@ span.stripe-bg {
 
 
 
+.course-single-item{
+    .bundle-course-thumb{
+        position: relative;
+        transition: ease-in-out .3s;
+    
+        .remove-bundle{
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            z-index: 99;
+            transition: ease-in-out .3s;
+    
+            .btn-remove{
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                width: 2rem;
+                height: 2rem;
+                border-radius: 50%;
+                background-color: #fe251b;
+                transition: ease-in-out .3s;
+                opacity: 0;
+                i{
+                    color: #fff;
+                }
+            }
+        }
+    }
+
+    &:hover{
+        .bundle-course-thumb {
+            .remove-bundle {
+                .btn-remove{
+                    opacity: 1; 
+                }
+            }
+        }
+    }
+}
 
 
 
