--- a/public/latest/assets/admin-css/elearning.css
+++ b/public/latest/assets/admin-css/elearning.css
@@ -19,6 +19,8 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  display: block;
+  width: 100%;
 }
 .course-single-item .course-thumb-box span.badge {
   position: absolute;
