--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -6,7 +6,6 @@
     border-radius: 1rem;
     background: var(--background-light-paper, #FFF);
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
-    // min-height: 20.625rem;
     padding: 0.5rem 0.5rem 1rem 0.5rem;
     display: flex;
     flex-direction: column;
@@ -23,6 +22,8 @@
             border-radius: 0.5rem;
             height: 100%;
             object-fit: cover;
+            display: block;
+            width: 100%;
         }
 
         span.badge {
