all panel check and doc listing

--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -8,6 +8,7 @@
     background: var(--neutral-color-white, #FFF);
     box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.10);
     padding: 1.5rem;
+    height: 100%;
 
     p {
         color: var(--neutral-color-neutral-60, #66768E);
