--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -3,6 +3,7 @@
   background: var(--neutral-color-white, #FFF);
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06), 0px 1px 3px 0px rgba(16, 24, 40, 0.1);
   padding: 1.5rem;
+  height: 100%;
 }
 .status-card-box p {
   color: var(--neutral-color-neutral-60, #66768E);
