--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -1154,6 +1154,8 @@
 
                     .avatar {
                         margin-right: 1rem;
+                        display: flex;
+                        flex-shrink: 0;
 
                         img {
                             width: 2.4rem;
@@ -1628,14 +1630,29 @@
         overflow-x: scroll;
     }
 
+    .course-status-wrap{
+        padding-top: 1rem;
+    }
     .course-status-wrap .d-flex {
-        padding: 0.8rem;
+        padding: 0.8rem; 
         flex-direction: column;
         align-items: flex-start;
 
-        div {
-            @include m.df;
+        div { 
             margin-top: 0.5rem;
+            width: 100%;
+            display: grid!important;
+            align-items: center;
+            grid-template-columns: 50% 50%!important;
+            a{
+                display: block;
+                width: 100%;
+                margin-top: 0!important;
+            }
+
+            .dropdown.course-status-filter{
+                margin-top: 0!important;
+            }
         }
 
     }
