--- a/scss/admin-dark.scss
+++ b/scss/admin-dark.scss
@@ -1839,6 +1839,10 @@
     .reset-modal .modal-content .btn i{
         color: #fff!important;
     }
+
+    .header-area .d-flex a.bttn.active{
+        background-color: #7289FF!important;
+    }
 }
 
 
