--- a/scss/header.scss
+++ b/scss/header.scss
@@ -171,6 +171,12 @@
                 /* 181.818% */
             }
         }
+        a.bttn.active{
+            background-color: #294CFF;
+            img{
+                filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+            }
+        }
 
         .btn.avatar {
             img {
