--- a/scss/subscription.scss
+++ b/scss/subscription.scss
@@ -143,8 +143,8 @@
                 }
 
                 span.danger {
-                    background-color: #F0783C !important;
-                    color: #fff !important;
+                    background: rgba(240, 120, 60, 0.10);
+                    color: #F0783C !important;
                 }
 
                 a {
