custom certificate generate done

--- a/scss/user.scss
+++ b/scss/user.scss
@@ -1992,12 +1992,14 @@
 }
 
 
+.select-style-div-2,
 .select-style-div{
     span{
         display: none!important;
     }
 }
 
+.select-style-div-2.active,
 .select-style-div.active{
     span{
         display: block!important;
