--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -1698,10 +1698,12 @@
   color: #667085;
 }
 
+.select-style-div-2 span,
 .select-style-div span {
   display: none !important;
 }
 
+.select-style-div-2.active span,
 .select-style-div.active span {
   display: block !important;
 }
