--- a/scss/elearning.scss
+++ b/scss/elearning.scss
@@ -2746,7 +2746,7 @@ span.stripe-bg {
         }
     }
 
-    .intro-video-box{
+    .intro-video-box {
         margin-bottom: 1.5rem;
     }
 
@@ -2756,7 +2756,7 @@ span.stripe-bg {
             font-size: 1.125rem;
             font-style: normal;
             font-weight: 600;
-            line-height: 155%; 
+            line-height: 155%;
         }
 
         .d-flex {
@@ -2765,7 +2765,7 @@ span.stripe-bg {
             padding: 1.5rem 0rem;
             border-bottom: 1px solid var(--gray-200, #E4E7EC);
 
-            img.icon{
+            img.icon {
                 color: rgba(0, 0, 0, 0.10);
                 margin-right: 1rem;
             }
@@ -2799,19 +2799,19 @@ span.stripe-bg {
 
 
 
-.course-single-item{
-    .bundle-course-thumb{
+.course-single-item {
+    .bundle-course-thumb {
         position: relative;
         transition: ease-in-out .3s;
-    
-        .remove-bundle{
+
+        .remove-bundle {
             position: absolute;
             right: 10px;
             top: 10px;
             z-index: 99;
             transition: ease-in-out .3s;
-    
-            .btn-remove{
+
+            .btn-remove {
                 display: inline-flex;
                 align-items: center;
                 justify-content: center;
@@ -2821,26 +2821,42 @@ span.stripe-bg {
                 background-color: #fe251b;
                 transition: ease-in-out .3s;
                 opacity: 0;
-                i{
+
+                i {
                     color: #fff;
                 }
             }
         }
     }
 
-    &:hover{
+    &:hover {
         .bundle-course-thumb {
             .remove-bundle {
-                .btn-remove{
-                    opacity: 1; 
+                .btn-remove {
+                    opacity: 1;
                 }
             }
         }
     }
 }
 
+.audio-iframe-box {
+    position: relative;
 
+    .big-thumb {
+        display: block;
+        width: 100%;
+    }
 
+    .player-bottom {
+        position: absolute;
+        left: 0%;
+        bottom: 0;
+        width: 100%;  
+        text-align: center;
+    }
+
+}
 
 
 
