access middleware done

--- a/public/latest/assets/admin-css/user.css
+++ b/public/latest/assets/admin-css/user.css
@@ -201,6 +201,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  color: #294CFF;
 }
 .user-profile-picture .media .media-body {
   position: relative;
