--- a/scss/user.scss
+++ b/scss/user.scss
@@ -226,6 +226,7 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+            color: #294CFF;
         }
 
         .media-body {
